<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">らくでん</string>

    <!-- Call -->
    <string name="call_not_found_app_error_toast">正しくアプリを認識できませんでした。らくでんの設定から電話アプリを設定してください</string>

    <!-- privacy policy -->
    <string name="privacy_policy_url">http://minismahn.hatenablog.com/entry/2017/02/04/200505</string>

    <!-- Ignore Contact -->
    <string name="ignore_list_title">プレフィックスをつけない宛先をチェックしてください</string>

    <!-- Menu Items -->
    <string name="menu_setting">設定</string>
    <string name="menu_privacy_policy">プライバシーポリシー</string>

    <!-- settings preference -->
    <string name="key_phone_app_list">phone_app_list</string>
    <string name="title_phone_app_list">起動する電話アプリ</string>
    <string name="title_dialog_phone_app_list">起動させる電話アプリを選択</string>

    <string name="key_prefix_enable">prefix_enable</string>
    <string name="title_prefix_enable">プレフィックス機能</string>
    <string name="summary_on_prefix_enable">プレフィックスをつける</string>
    <string name="summary_off_prefix_enable">プレフィックスをつけない</string>

    <string name="key_prefix_num">prefix_num</string>
    <string name="title_prefix_num">プレフィックス番号</string>
    <string name="title_prefix_num_dialog">先頭につける番号を入力</string>
    <string name="hint_prefix_num_dialog">デフォルトは「003768」</string>
    <string name="default_prefix_num">003768</string>

    <string name="key_free_dial">free_dial</string>
    <string name="title_free_dial">フリーダイアル番号を無視する</string>
    <string name="summary_on_free_dial">フリーダイアル番号の場合、\nプレフィックスをつけない</string>
    <string name="summary_off_free_dial">フリーダイアル番号の場合でも、\nプレフィックスをつける</string>

    <string name="key_special_num">special_num</string>
    <string name="title_special_num">特殊番号を無視する</string>
    <string name="summary_on_special_num">5桁以下,及び#,*始まりの番号は\nプレフィックスをつけない</string>
    <string name="summary_off_special_num">5桁以下,及び#,*始まりの番号でも\nプレフィックスをつける</string>

    <string name="key_international_num">international_num</string>
    <string name="title_international_num">国際電話対応</string>
    <string name="summary_on_international_num">楽天でんわ対応国際電話番号にプレフィックスをつける</string>
    <string name="summary_off_international_num">楽天でんわ対応国際電話番号でもプレフィックスをつけない</string>

    <string name="key_show_adbuddiz">show_adbuddiz</string>
    <string name="title_show_adbuddiz">広告の表示設定</string>
    <string name="summary_on_show_adbuddiz">広告を表示する</string>
    <string name="summary_off_show_adbuddiz">広告を表示しない</string>


    <!-- no used -->
    <string name="search_view_hint">電話番号か宛先名を入力</string>
    <string name="toast_prefix_num_setend">「%s」をプレフィックスの番号として設定しました</string>
    <string name="preference_action_settings">電話アプリ</string>
    <string name="call_not_found_app_notice_toast">電話アプリの設定されていません。起動したい電話アプリを選択してください</string>
    <string name="call_not_found_app_cancel_toast">キャンセルされました。らくでんの設定から電話アプリを設定してください</string>
    <string name="dialog_prefix_num_error">無効な文字列が存在したため反映できませんでした</string>
    <string name="dialog_prefix_num_title">先頭につける番号を入力</string>
    <string name="dialog_prefix_num_hint">空欄は「003768」</string>
    <string name="toast_special_num_ignore_on">5桁以下,及び#,*始まりの番号は自動でプレフィックスをつけない設定になりました</string>
    <string name="toast_special_num_ignore_off">5桁以下,及び#,*始まりの番号でも自動でプレフィックスをつける設定になりました</string>
    <string name="toast_prefix_enable_on">プレフィックス機能を有効にしました</string>
    <string name="toast_prefix_enable_off">プレフィックス機能を無効にしました</string>
    <string name="toast_adbuddiz_on">広告を表示しません</string>
    <string name="toast_adbuddiz_off">広告を表示します</string>
    <string name="checkbox_adbuddiz_summary_on">非表示</string>
    <string name="checkbox_adbuddiz_summary_off">表示</string>
    <string name="checkbox_prefix_enable_summary_on">有効</string>
    <string name="checkbox_prefix_enable_summary_off">無効</string>
    <string name="checkbox_special_num_ignore_on">5桁以下,及び#,*始まりの番号は自動で無視する</string>
    <string name="checkbox_special_num_ignore_off">5桁以下,及び#,*始まりの番号は自動で無視しない</string>
    <string name="checkbox_international_num_on">楽天でんわ対応の国際電話番号にプレフィックスを付ける</string>
    <string name="checkbox_international_num_off">国際電話番号にプレフィックスを付けない</string>
    <string name="toast_international_num_on">楽天でんわ対応の国際電話番号にプレフィックスを付ける設定になりました</string>
    <string name="toast_international_num_off">国際電話番号にはプレフィックスを付けない設定になりました</string>
    <string name="exception_prefix_list_title">削除する場合は番号をタップしてください</string>
    <string name="exception_prefix_add">追加</string>
    <string name="exception_prefix_add_toast">「%s」を無視するフリーダイアル番号に追加しました</string>
    <string name="exception_prefix_del">削除</string>
    <string name="exception_prefix_del_toast">「%s」を無視するフリーダイアル番号から削除しました</string>
    <string name="exception_prefix_dialog_title">確認</string>
    <string name="exception_prefix_add_dialog_title">番号入力</string>
    <string name="exception_prefix_dialog_message">「%s」を削除しますか?</string>
</resources>
